[gd_scene load_steps=2 format=3 uid="uid://0p07nc8e2mwo"]

[ext_resource type="Script" path="res://editor/int_editor.gd" id="1_uc05k"]

[node name="IntEditor" type="LineEdit"]
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -15.5
offset_bottom = 15.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 4
focus_mode = 1
text = "0"
caret_blink = true
caret_blink_interval = 0.5
script = ExtResource("1_uc05k")

[node name="IncButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -22.0
offset_bottom = -16.0
grow_horizontal = 0
grow_vertical = 2
focus_mode = 0
flat = true

[node name="DecButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -22.0
offset_top = 16.0
offset_bottom = 1.0
grow_horizontal = 0
grow_vertical = 2
focus_mode = 0
flat = true

[node name="IncLabel" type="Label" parent="."]
custom_minimum_size = Vector2(22, 0)
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -14.0
grow_horizontal = 0
grow_vertical = 2
text = "⌃"
horizontal_alignment = 1
vertical_alignment = 1

[node name="DecLabel" type="Label" parent="."]
custom_minimum_size = Vector2(22, 0)
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -14.0
grow_horizontal = 0
grow_vertical = 2
text = "⌄"
horizontal_alignment = 1
vertical_alignment = 1
